hover section work ok

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <h4 lang="en">Creative Companies' Management / ESC Dijon</h4>
         <h4 lang="fr">Master Management des Entreprises Créatives / ESC Dijon</h4>
         <h5 lang="en">Strong web marketing skills </h5>
-        <h5>Understand product evolution and the market, how launch a product</h5>
+        <h5 lang="en">Understand product evolution and the market, how launch a product</h5>
         <h5 lang="fr">Solides connaissances en web marketing</h5>
         <h5 lang="fr">Comprendre la création d'un produit, son évolution et son marché</h5>
         <blockquote lang="en" target="_blank"><p><a href="http://www.meilleurs-masters.com/master-management-des-entreprises-culturelles.html" target="_blank"><em>N°1 in the top of Creative Companies Management in France -<br />SMBG's ranking</em></p></a></blockquote>
@@ -366,7 +366,8 @@
             <a href="https://www.lewagon.com/fr/blog/lewagon-demoday-8" target="_blank">
               <div class="span12 pagination-centered">
                 <img class="press-img" src="img/press/sneakr.png"></br>
-                Live présentation du site Sneakr à 48 minutes 51
+                <span lang="en">Live presentation of my website Sneakr <br>(48'51)</span>
+                <span lang="fr">Live présentation du site Sneakr <br>(48 minutes 51)</span>
               </div>
             </a>
           </li>
@@ -377,7 +378,8 @@
               <div class="span12 pagination-centered">
                 <img class="press-img"
                 src="img/press/refuginius.png"></br>
-                Developpement du "Linkedin des refugiés"</br>Hackaton Techfugees
+                <span lang="en">Creation of the "Linkedin for refugees"</br>Hackaton Techfugees - Paris</span>
+                <span lang="fr">Developpement du "Linkedin des refugiés"</br>Hackaton Techfugees - Paris</span>
               </div>
             </a>
           </li>
@@ -386,7 +388,8 @@
             <a href="http://expressionculture.wix.com/thinklab#!katalina-et-clothilde/zoom/czx4/i1ama" target="_blank">
               <div class="span12 pagination-centered">
                 <img class="press-img" src="img/press/thinklab.png"></br>
-                Intervenante conférence "L'avenir de la musique digitale"
+                <span lang="en">Speaker about "The futur of digital music"</span>
+                <span lang="fr">Intervenante conférence "L'avenir de la musique digitale"</span>
               </div>
             </a>
           </li>
@@ -395,7 +398,8 @@
             <a href="https://www.facebook.com/believerecordings/photos/t.617651442/295885160504543/?type=3&theater" target="_blank">
               <div class="span12 pagination-centered">
                 <img class="press-img" src="img/press/believe.png"></br>
-                Une journée chez Believe" Mai 2012
+                <span lang="en">"A day with the company Believe" Mai 2012</span>
+                <span lang="fr">"Une journée chez Believe" Mai 2012</span>
               </div>
             </a>
           </li>
@@ -426,44 +430,75 @@
       </div>
 
       <div class="row">
+
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.2s">
+        <img class="recent-work-img" src="img/screenshots/eavest.png"></br>
         <div class="over">
-          <figure>
-            <img class="recent-work-img" src="img/screenshots/eavest.png"></br>
-            <figcaption>
+            <span class="more">
               <h1>Eavest</h1>
               <p>Refonte du nouveau site, réalisation de toute la partie FrontEnd</p>
+              <p>Site bientôt en ligne (juillet 2017)</p>
               <a href="http://eavest.com/"><button class="btn-primary" type="button" name="button">Voir le site</button></a>
-            </figcaption>
-          </figure>
+            </span>
         </div>
       </div>
 
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.3s">
-        <a href="www.adaweek.fr"><img class="recent-work-img" src="img/screenshots/adaweek.png"></a></br>
+        <img class="recent-work-img" src="img/screenshots/adaweek.png"></br>
+        <div class="over">
+            <span class="more">
+              <h1>Adaweek</h1>
+              <p>Création du design et réalisation du site</p>
+              <a href="http://www.adaweek.fr/"><button class="btn-primary" type="button" name="button">Voir le site</button></a>
+            </span>
+        </div>
       </div>
 
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.4s">
         <img class="recent-work-img" src="img/screenshots/labanquepostale.png"></br>
+        <div class="over">
+            <span class="more">
+              <h1>La banque postale</h1>
+              <p>Création d'un mini-site de jeu concours</p>
+              <p>Développement FrontEnd - Angular 1.5</p>
+              <p>Jeu-concours terminé (site non actif)</p>
+            </span>
+        </div>
       </div>
 
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.2s">
-        <div class="span12">
-          <img class="work-img" src="img/screenshots/image1.png"></br>
+        <img class="work-img" src="img/screenshots/sneakr.png"></br>
+        <div class="over">
+            <span class="more-tall">
+              <h1>Sneakr</h1>
+              <p>Création / développement / design</p>
+              <p>Version-démo d'un moteur de recherche de Sneakr à petit prix</p>
+              <p>Scraping, parsing, design, développement (projet à deux)</p>
+              <p>Site plus disponible en ligne (voir mon Github)</p>
+            </span>
         </div>
       </div>
 
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.3s">
-        <div class="span12">
-          <img class="work-img" src="img/screenshots/image2.png"></br>
+        <img class="work-img" src="img/screenshots/template.png"></br>
+        <div class="over">
+            <span class="more-tall">
+              <h1>Hologram</h1>
+              <p>Développement de template</p>
+            </span>
         </div>
       </div>
 
       <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.4s">
-        <div class="span12">
-          <img class="work-img" src="img/screenshots/image3.png"></br>
+        <img class="work-img" src="img/screenshots/adablog.png"></br>
+        <div class="over">
+            <span class="more-tall">
+              <h1>Blogs</h1>
+              <p>Réalisation des divers blogs sous Wordpress</p>
+            </span>
         </div>
       </div>
+
       </div>
 
       </div>
