début 118n site en javascript

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="fr">
 <html>
+
   <head>
     <title>Katalina Nadasi</title>
 
@@ -36,7 +36,7 @@
     <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
   </head>
 
-  <body>
+  <body class="fr">
     <!--
 
       STTTTTS    STTTTTTT        sssss
