quelques modifs style

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
           <p lang="fr" class="wow fadeIn" data-wow-delay="0.9s">Bootstrap et mon meilleur ami et nous codons ensemble des sites internet cool</p></br></br></br>
 
           <ul class="list-inline">
-          <li><a href="#work" lang="en" class="btn btn-trans btn-lg text-center" role="button">LET'S WORK TOGETHER</a></li>
-          <li><a href="#work" lang="fr" class="btn btn-trans btn-lg text-center" role="button">PARLONS-EN</a></li>
+          <li><a href="#contact" lang="en" class="btn btn-trans btn-lg text-center" role="button">LET'S WORK TOGETHER</a></li>
+          <li><a href="#contact" lang="fr" class="btn btn-trans btn-lg text-center" role="button">PARLONS-EN</a></li>
           </ul>
         </div>
 
@@ -225,8 +225,8 @@
     <div class="col-lg-4 col-md-4 wow bounceInLeft">
       <i class="fa fa-paint-brush fa-3x" aria-hidden="true" aria-hidden="true"></i>
       <h3>FrontEnd</h3>
-      <p lang="en">Html5, CSS3, Javascript and Jquery.<br>Separate stylesheets, latest CSS tricks and techniques to apply great styling.</p>
-      <p lang="fr">Html5, CSS3, Javascript et Jquery.<br>Feuilles de styles séparées, dernières astuces et techniques CSS pour créer avec style.</p>
+      <p lang="en">Html5, CSS3 (transitions, transforms, etc.), Javascript and Jquery. Modular CSS.<br>Separate stylesheets, latest CSS tricks and techniques to apply great styling.</p>
+      <p lang="fr">Html5, CSS3 (transitions, transforms, etc.), Javascript et Jquery. CSS modulaire.<br>Feuilles de styles séparées, dernières astuces et techniques CSS pour créer avec style.</p>
 
       <i class="fa fa-cloud fa-3x" aria-hidden="true" id="icon3"></i>
       <h3>"Awesome stylesheets"</h3>
