--- a/indexEn.html
+++ b/indexEn.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 
   <head>
     <title>Katalina Nadasi</title>
@@ -36,7 +36,7 @@
     <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
   </head>
 
-  <body class="fr">
+  <body class="en">
     <!--
 
       STTTTTS    STTTTTTT        sssss
@@ -83,12 +83,12 @@
 
       <div class="navbar-collapse collapse" id="nav-en">
         <ul class="nav navbar-nav navbar-right">
-          <li lang="fr"><a href="#studies">ETUDES</a></li>
-          <li lang="fr"><a href="#skills">COMPETENCES</a></li>
-          <li lang="fr"><a href="#certifications">CERTIFICATIONS</a></li>
-          <li lang="fr"><a href="#press">PRESSE</a></li>
-          <li lang="fr"><a href="#work">BOOK</a></li>
-          <li lang="fr"><a href="#contact">CONTACT</a></li>
+          <li><a href="#studies" lang="en">EDUCATION</a></li>
+          <li><a href="#skills">SKILLS</a></li>
+          <li><a href="#certifications">CERTIFICATIONS</a></li>
+          <li><a href="#press">PRESS</a></li>
+          <li><a href="#work">WORK</a></li>
+          <li><a href="#contact">CONTACT</a></li>
         </ul>
       </div>
 
@@ -127,19 +127,20 @@
 
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft">
           <h1 class="wow fadeIn" data-wow-delay="0.4s">Welcome</h1>
-          <p lang="fr" class="wow fadeIn" data-wow-delay="0.8s">Je suis Katalina Nadasi</p>
-          <p lang="fr" class="wow fadeIn" data-wow-delay="0.8s">Front-End developeur et intégrateur</br>à Paris</p>
-          <p lang="fr" class="wow fadeIn" data-wow-delay="0.9s">Bootstrap et mon meilleur ami (mais pas que) et nous codons ensemble des sites internet cool</p></br></br></br>
-          <p lang="fr" class="wow fadeIn" data-wow-delay="1s">Besoin d'aide sur un projet ? Besoin d'un freelance ?</p></br></br></br>
+          <p class="wow fadeIn" data-wow-delay="0.8s">I'm Katalina Nadasi</p>
+          <p class="wow fadeIn" data-wow-delay="0.8s">I'm a Front-End developer and integrator </br>based in Paris</p>
+          <p class="wow fadeIn" data-wow-delay="0.9s">Bootstrap is my best friend and together we build very nice responsive websites</p></br></br></br>
+          <p class="wow fadeIn" data-wow-delay="1s">Looking for help on your project ? Need to hire a free-lance ?</p></br></br></br>
 
           <ul class="list-inline">
-          <li><a href="#contact" lang="fr" class="btn btn-trans btn-lg text-center" role="button">PARLONS-EN</a></li>
+          <li><a href="#contact" class="btn btn-trans btn-lg text-center" role="button">LET'S WORK TOGETHER</a></li>
           </ul>
         </div>
 
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" align="center">
           <a href="#studies"><img class="img-responsive" src="img/bannerIMG.png"></a>
         </div>
+
 
       </div>
     </div>
@@ -155,7 +156,7 @@
 
       <div class="row">
       <div class="col-lg-12 col-md-12">
-        <h1 lang="fr"><strong>ETUDES</strong></h1>
+        <h1><strong>EDUCATION</strong></h1>
       </div>
       </div>
 
@@ -163,18 +164,19 @@
 
       <div class="col-lg-6 col-md-6 wow fadeIn" data-wow-delay="0.3s">
         <img src="img/lewagon.png" class="img-circle" id="img">
-        <h4 lang="fr">Formation Developeur web Bootcamp 9 semaines / Le Wagon</h4>
-        <h5 lang="fr">HTML/CSS, Javascript, Ruby on Rails, Git et Github</h5>
-        <h5 lang="fr">Developpement de sites internets inspirés de Airbnb</h5>
-        <blockquote lang="fr"><p><a href="https://www.switchup.org/research/best-coding-bootcamps" target="blank"><em>N°1 des écoles de code au monde -<br /> Switchup</em></p></a></blockquote>
+        <h4>Web Developeur Bootcamp 9 weeks / Le Wagon</h4>
+        <h5>HTML/CSS, Javascript, Ruby on Rails, Git and Github</h5>
+        <h5>Development of our own Airbnb-like website</h5>
+
+        <blockquote><p><a href="https://www.switchup.org/research/best-coding-bootcamps" target="blank"><em>Le Wagon is first in the top 31 coding schools in the world - <br /> Switchup</em></p></a></blockquote>
       </div>
 
       <div class="col-lg-6 col-md-6 wow fadeIn" data-wow-delay="0.5s">
         <img src="img/escDijon.png" class="img-circle" id="img">
-        <h4 lang="fr">Master Management des Entreprises Créatives / ESC Dijon</h4>
-        <h5 lang="fr">Solides connaissances en web marketing</h5>
-        <h5 lang="fr">Comprendre la création d'un produit, son évolution et son marché</h5>
-        <blockquote lang="fr" target="_blank"><p><a href="http://www.meilleurs-masters.com/master-management-des-entreprises-culturelles.html" target="_blank"><em>N°1 Master Management des Entreprises Culturelles -<br />Classement SMBG</em></p></a></blockquote>
+        <h4>Creative Companies' Management / ESC Dijon</h4>
+        <h5>Strong web marketing skills </h5>
+        <h5>Understand product evolution and the market, how launch a product</h5>
+        <blockquote target="_blank"><p><a href="http://www.meilleurs-masters.com/master-management-des-entreprises-culturelles.html" target="_blank"><em>N°1 in the top of Creative Companies Management in France -<br />SMBG's ranking</em></p></a></blockquote>
       </div>
 
       </div>
@@ -192,8 +194,8 @@
 
       <div class="row">
       <div class="col-lg-12 col-md-12">
-        <h1 lang="fr">COMPETENCES</h1>
-        <p lang="fr"><em>Passionnée de design et de code</br>Je crée des sites en HTML, CSS, Javascript, Bootstrap</em></p></br></br>
+        <h1>SKILLS</h1>
+        <p><em>I've a passion for design and coding</br>I enjoy creating various sites through HTML, CSS, Javascript and Bootstrap</em></p></br></br>
       </div>
       </div>
 
@@ -201,15 +203,15 @@
     <div class="col-lg-4 col-md-4 wow bounceInLeft">
       <i class="fa fa-paint-brush fa-3x" aria-hidden="true" aria-hidden="true"></i>
       <h3>FrontEnd</h3>
-      <p lang="fr">Html5, CSS3 (transitions, transforms, etc.), Javascript et Jquery. CSS modulaire.<br>Feuilles de styles séparées, dernières astuces et techniques CSS pour créer avec style.</p>
+      <p>Html5, CSS3 (transitions, transforms, etc.), Javascript and Jquery. Modular CSS.<br>Separate stylesheets, latest CSS tricks and techniques to apply great styling.</p>
 
       <i class="fa fa-cloud fa-3x" aria-hidden="true" id="icon3"></i>
       <h3>"Awesome stylesheets"</h3>
-      <p lang="fr">Dernières fonctionnalités appliquées aux feuilles de style via SASS (Syntactically Awesome Style Sheets) et COMPASS pour un chargement plus rapide des pages. <br/> Utilisation de Atom et Emmet.</p>
+      <p>Extra functionality of stylesheets using SASS (Syntactically Awesome Style Sheets) and COMPASS for a web page to render quicker. <br/> Use Atom and Emmet</p>
 
       <i class="fa fa-universal-access fa-3x" aria-hidden="true" id="icon1"></i>
       <h3>Responsive</h3>
-      <p lang="fr">La logique "Mobile first" avec Bootstrap.</br>Developpe avant tout un site parfaitement lisible sur mobile et tous navigateurs.</p>
+      <p>Mobile first with Bootstrap.</br>Develop custom and profitable Responsive and cross-browser websites.</p>
 
     </div>
 
@@ -220,20 +222,20 @@
     <div class="col-lg-4 col-md-4 wow bounceInRight">
       <i class="fa fa-puzzle-piece fa-3x" aria-hidden="true" id="icon3"></i>
       <h3>Webdesign</h3>
-      <p lang="fr">Utilisation de Photoshop, différentes couches de style, contrastes, fonts. Animations SVG via HTML, CSS et Javascript.</p>
+      <p>Using the right way Photoshop, layer styles, contrast, fonts. SVG animations with HTML, CSS and Javascript.</p>
 
       <i class="fa fa-code-fork fa-3x" aria-hidden="true" id="icon3"></i>
       </br></br><h3>Versioning system</h3>
-      <p lang="fr">Utilisation de Git and Github pour un travail collaboratif et controlé.</p>
+      <p>Manage files with Git and Github using source control. Create branches and resolve merge conflicts.</p>
 
       <i class="fa fa-cubes fa-3x" aria-hidden="true" id="icon2"></i>
     </br><h3>BackEnd</h3>
-      <p lang="fr">Utilisation très basique de Ruby, Angular 1.5 et ReactJS qui sera bientôt ma nouvelle religion. To be continued...</p>
+      <p>Very basic skills in Ruby and the framework Rails, Angular 1.5 and ReactJS which will be soon my new religion. To be continued...</p>
     </div>
 
     <div class="row">
     <div class="col-lg-12 col-md-12">
-      <p lang="fr">Mais aussi récupération des données d'un formulaire sécurisé en php, travaux sous Wordpress, création d'un chatbot sous Messenger (API.AI), etc. <br /><br /><br /><i class="fa fa-apple" aria-hidden="true"></i> lover</p>
+      <p>But also securised form datas (php), some work on Wordpress, creation of a chatbot on Messenger (API.AI), etc.<br /> By the way, I'm a <i class="fa fa-apple" aria-hidden="true"></i> lover</p>
     </div>
     </div>
 
@@ -255,7 +257,7 @@
       <div class="col-lg-12 col-md-12">
 
         </br></br><h4>Certifications</h4></br>
-        <p lang="fr"><em>Je suis pas mal de cours en ligne pour une autoformation constante</em></p></br></br>
+        <p><em>I'm following a lot of online courses, here are basics one</em></p></br></br>
       </div>
       </div>
 
@@ -319,8 +321,7 @@
       <div class="row">
       <div class="col-lg-12 col-md-12">
 
-    </br></br><h4 lang="fr">On en parle</h4></br>
-
+      </br></br><h4>More online</h4></br>
 
       </div>
       </div>
@@ -332,7 +333,7 @@
             <a href="http://www.lereacteur.io/fr" target="_blank">
               <div class="pagination-centered">
                 <img class="press-img" src="img/press/reacteur.png"></br>
-                <span lang="fr">"Ils ont suivi la formation"</span>
+                <span>"Ils ont suivi la formation"</span>
               </div>
             </a>
           </li>
@@ -341,7 +342,7 @@
             <a href="http://www.adaweek.fr/" target="_blank">
               <div class="pagination-centered">
                 <img class="press-img" src="img/press/adaweek.png"></br>
-                <span lang="fr">Membre de l'équipe Adaweek <br/> évènement autour des femmes dans les métiers technologiques et scientifiques</span>
+                <span>Part of the team Adaweek <br/> fest around women in tech</span>
               </div>
             </a>
           </li>
@@ -350,7 +351,7 @@
             <a href="https://www.facebook.com/konexio.eu/?pnref=story" target="_blank">
               <div class="pagination-centered">
                 <img class="press-img" src="img/press/konexio.png"></br>
-                <span lang="fr">Conférence auprès d'un public que réfugiés 'Comment le code peut aider à l'insertion sociale' / Association Konexio</span>
+                <span>Talk to refugees about how coding can help social inclusion / Association Konexio</span>
               </div>
             </a>
           </li>
@@ -359,7 +360,7 @@
             <a href="https://www.lewagon.com/fr/blog/lewagon-demoday-8" target="_blank">
               <div class="span12 pagination-centered">
                 <img class="press-img" src="img/press/sneakr.png"></br>
-                <span lang="fr">Live présentation du site Sneakr <br>(48 minutes 51)</span>
+                <span>Live presentation of my website Sneakr <br>(48'51)</span>
               </div>
             </a>
           </li>
@@ -369,7 +370,7 @@
               <div class="span12 pagination-centered">
                 <img class="press-img"
                 src="img/press/refuginius.png"></br>
-                <span lang="fr">Developpement du "Linkedin des refugiés"</br>Hackaton Techfugees - Paris</span>
+                <span>Creation of the "Linkedin for refugees"</br>Hackaton Techfugees - Paris</span>
               </div>
             </a>
           </li>
@@ -392,7 +393,9 @@
       <div class="row">
       <div class="col-lg-12 col-md-12">
 
-      <h1 lang="fr">REALISATIONS RECENTES</h1>
+      <h1>TAKE A LOOK AT MY RECENT WORK</h1>
+      <p>View some of the screenshots from my recent work</p>
+
 
       </div>
       </div>
@@ -482,7 +485,7 @@
 
     <div class="row">
     <div class="col-lg-12 col-md-12">
-      <h1 lang="fr">Parlons-en !</h1>
+      <h1>Let's talk about it !</h1>
 
 
       <ul class="list-inline">
