--- a/indexEn.html
+++ b/indexEn.html
@@ -103,34 +103,13 @@
     <div class="container">
       <div class="row">
 
-        <!-- Modal -->
-        <!-- Trigger the modal with a button -->
-
-        <div id="myModal" class="modal fade" role="dialog" data-backdrop="static" data-keyboard="false">
-          <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Choisissez votre langue</h4>
-                <h4 class="modal-title">Please choose your langage</h4>
-              </div>
-              <div class="modal-body">
-                <button onclick="location.href = 'index.html';" class="btn-language" id="fr-btn">Français</button>
-                <button onclick="location.href = 'indexEn.html';" class="btn-language" id="en-btn">English</button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- end modal -->
 
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 wow fadeInLeft">
           <h1 class="wow fadeIn" data-wow-delay="0.4s">Welcome</h1>
           <p class="wow fadeIn" data-wow-delay="0.8s">I'm Katalina Nadasi</p>
           <p class="wow fadeIn" data-wow-delay="0.8s">I'm a Front-End developer and integrator </br>based in Paris</p>
           <p class="wow fadeIn" data-wow-delay="0.9s">Bootstrap is my best friend and together we build very nice responsive websites</p></br></br></br>
-          <p class="wow fadeIn" data-wow-delay="1s">Looking for help on your project ? Need to hire a free-lance ?</p></br></br></br>
+          <p class="wow fadeIn" data-wow-delay="1s">Looking for help on your project ? <br/> Need to hire a free-lance ?</p></br></br></br>
 
           <ul class="list-inline">
           <li><a href="#contact" class="btn btn-trans btn-lg text-center" role="button">LET'S WORK TOGETHER</a></li>
@@ -333,7 +312,7 @@
             <a href="http://www.lereacteur.io/fr" target="_blank">
               <div class="pagination-centered">
                 <img class="press-img" src="img/press/reacteur.png"></br>
-                <span>"Ils ont suivi la formation"</span>
+                <span>"Ils ont suivi la formation React Native"</span>
               </div>
             </a>
           </li>
