--- a/indexFr.html
+++ b/indexFr.html
@@ -34,6 +34,9 @@
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
+    <!--[if lt IE 9]>
+	  <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+    <![endif]-->
   </head>
 
   <body class="fr">
@@ -246,7 +249,7 @@
             <a href="https://openclassrooms.com/course-certificates/3239689026" target="_blank">
               <img style="height:150px" style="width:150px" src="img/certifs/html.png">
                 <div class="span12 pagination-centered">
-                  "Créer votre site web en HTML5 et CSS3"
+                  HTML5 / CSS3
                 </div>
               </a>
           </li>
@@ -255,7 +258,7 @@
             <a href="https://openclassrooms.com/course-certificates/5771754531">
               <img style="height:150px" style="width:150px" src="img/certifs/integrer.png">
                 <div class="span12 pagination-centered">
-                  "Decouper et intégrer une maquette"
+                  Intégration
                 </div>
             </a>
           </li>
@@ -264,7 +267,7 @@
             <a href="https://openclassrooms.com/course-certificates/5310942058" target="_blank">
               <img style="height:150px" style="width:150px" src="img/certifs/javascript.png">
                 <div class="span12 pagination-centered">
-                  "Apprenez à coder avec Javascript"
+                  Javascript
                 </div>
             </a>
           </li>
@@ -274,7 +277,7 @@
             <a href="https://openclassrooms.com/course-certificates/4789675666" target="_blank">
               <img style="height:150px" style="width: 150px" src="img/certifs/git.png">
                 <div class="span12 pagination-centered">
-                  "Gérer son code avec git et github"
+                  Git / Github
                 </div>
             </a>
           </li>
@@ -383,7 +386,7 @@
             <span class="more">
               <h1>Eavest</h1>
               <p>Refonte du nouveau site, réalisation de toute la partie FrontEnd</p>
-              <p>Site bientôt en ligne (juillet 2017)</p>
+              <p>Site bientôt en ligne (juillet 2017)</p><br />
               <a href="http://eavest.com/"><button class="btn-primary" type="button" name="button">Voir le site</button></a>
             </span>
         </div>
@@ -394,7 +397,7 @@
         <div class="over">
             <span class="more">
               <h1>Adaweek</h1>
-              <p>Création du design et réalisation du site</p>
+              <p>Création du design et réalisation du site</p><br /><br />
               <a href="http://www.adaweek.fr/"><button class="btn-primary" type="button" name="button">Voir le site</button></a>
             </span>
         </div>
@@ -420,7 +423,7 @@
               <p>Création / développement en Ruby / design</p>
               <p>Version-démo d'un moteur de recherche de Sneakr à petit prix</p>
               <p>Scraping, parsing, design, développement (projet à deux)</p>
-              <p>Site plus disponible en ligne (voir mon Github)</p>
+              <p>Site plus disponible en ligne<br/><br/><br/><a href="https://github.com/KatalinaNadasi/Sneakr"><button class="btn-primary">Voir projet sur Github</button></a></p>
             </span>
         </div>
       </div>
