--- a/indexEn.html
+++ b/indexEn.html
@@ -34,6 +34,9 @@
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
+    <!--[if lt IE 9]>
+	  <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+    <![endif]-->
   </head>
 
   <body class="en">
@@ -214,7 +217,7 @@
 
     <div class="row">
     <div class="col-lg-12 col-md-12">
-      <p>But also securised form datas (php), some work on Wordpress, creation of a chatbot on Messenger (API.AI), etc.<br /> By the way, I'm a <i class="fa fa-apple" aria-hidden="true"></i> lover</p>
+      <p>But also securised form datas (php), some work on Wordpress, creation of a chatbot on Messenger (API.AI), etc.<br /><br /><i class="fa fa-apple" aria-hidden="true"></i> lover</p>
     </div>
     </div>
 
@@ -249,7 +252,7 @@
             <a href="https://openclassrooms.com/course-certificates/3239689026" target="_blank">
               <img style="height:150px" style="width:150px" src="img/certifs/html.png">
                 <div class="span12 pagination-centered">
-                  "Créer votre site web en HTML5 et CSS3"
+                  HTML5 / CSS3
                 </div>
               </a>
           </li>
@@ -258,7 +261,7 @@
             <a href="https://openclassrooms.com/course-certificates/5771754531">
               <img style="height:150px" style="width:150px" src="img/certifs/integrer.png">
                 <div class="span12 pagination-centered">
-                  "Decouper et intégrer une maquette"
+                  Integration
                 </div>
             </a>
           </li>
@@ -267,7 +270,7 @@
             <a href="https://openclassrooms.com/course-certificates/5310942058" target="_blank">
               <img style="height:150px" style="width:150px" src="img/certifs/javascript.png">
                 <div class="span12 pagination-centered">
-                  "Apprenez à coder avec Javascript"
+                  Javascript
                 </div>
             </a>
           </li>
@@ -277,7 +280,7 @@
             <a href="https://openclassrooms.com/course-certificates/4789675666" target="_blank">
               <img style="height:150px" style="width: 150px" src="img/certifs/git.png">
                 <div class="span12 pagination-centered">
-                  "Gérer son code avec git et github"
+                  Git / Github
                 </div>
             </a>
           </li>
@@ -312,7 +315,7 @@
             <a href="http://www.lereacteur.io/fr" target="_blank">
               <div class="pagination-centered">
                 <img class="press-img" src="img/press/reacteur.png"></br>
-                <span>"Ils ont suivi la formation React Native"</span>
+                <span>React Native training</span>
               </div>
             </a>
           </li>
@@ -386,9 +389,9 @@
         <div class="over">
             <span class="more">
               <h1>Eavest</h1>
-              <p>Refonte du nouveau site, réalisation de toute la partie FrontEnd</p>
-              <p>Site bientôt en ligne (juillet 2017)</p>
-              <a href="http://eavest.com/"><button class="btn-primary" type="button" name="button">Voir le site</button></a>
+              <p>FrontEnd part in all the new website</p>
+              <p>Online soon (August-sept 2017)</p></br>
+              <a href="http://eavest.com/"><button class="btn-primary" type="button" name="button">Website</button></a>
             </span>
         </div>
       </div>
@@ -398,8 +401,8 @@
         <div class="over">
             <span class="more">
               <h1>Adaweek</h1>
-              <p>Création du design et réalisation du site</p>
-              <a href="http://www.adaweek.fr/"><button class="btn-primary" type="button" name="button">Voir le site</button></a>
+              <p>Design and developpement of all the website</p></br></br>
+              <a href="http://www.adaweek.fr/"><button class="btn-primary" type="button" name="button">Website</button></a>
             </span>
         </div>
       </div>
@@ -409,9 +412,9 @@
         <div class="over">
             <span class="more">
               <h1>La banque postale</h1>
-              <p>Création d'un mini-site de jeu concours</p>
-              <p>Développement FrontEnd - Angular 1.5</p>
-              <p>Jeu-concours terminé (site non actif)</p>
+              <p>Developpement of a online quiz</p>
+              <p>FrontEnd - Angular 1.5</p>
+              <p>Website not online anymore (the quiz ends)</p>
             </span>
         </div>
       </div>
@@ -421,10 +424,10 @@
         <div class="over">
             <span class="more-tall">
               <h1>Sneakr</h1>
-              <p>Création / développement en Ruby / design</p>
-              <p>Version-démo d'un moteur de recherche de Sneakr à petit prix</p>
-              <p>Scraping, parsing, design, développement (projet à deux)</p>
-              <p>Site plus disponible en ligne (voir mon Github)</p>
+              <p>Design and developpement / Ruby</p>
+              <p>Search-engine of Sneakrs</p>
+              <p>Scraping, parsing, design, developpement</p>
+              <p>Not online anymore <br/><br/><br/><a href="https://github.com/KatalinaNadasi/Sneakr"><button class="btn-primary">View project on Github</button></a></p>
             </span>
         </div>
       </div>
@@ -434,7 +437,7 @@
         <div class="over">
             <span class="more-tall">
               <h1>Hologram</h1>
-              <p>Développement de template / Html - CSS</p>
+              <p>Developpement of templates / Html5 - CSS3</p>
             </span>
         </div>
       </div>
@@ -444,7 +447,7 @@
         <div class="over">
             <span class="more-tall">
               <h1>Blogs</h1>
-              <p>Réalisation des divers blogs sous Wordpress</p>
+              <p>Blogs / Wordpress</p>
             </span>
         </div>
       </div>
