--- a/indexEn.html
+++ b/indexEn.html
@@ -204,7 +204,7 @@
     <div class="col-lg-4 col-md-4 wow bounceInRight">
       <i class="fa fa-puzzle-piece fa-3x" aria-hidden="true" id="icon3"></i>
       <h3>Webdesign</h3>
-      <p>Using the right way Photoshop, layer styles, contrast, fonts. SVG animations with HTML, CSS and Javascript.</p>
+      <p>Using the right way Photoshop, layer styles, contrast, transitions, fonts. SVG animations with HTML, CSS and Javascript.</p>
 
       <i class="fa fa-code-fork fa-3x" aria-hidden="true" id="icon3"></i>
       </br></br><h3>Versioning system</h3>
@@ -251,7 +251,7 @@
           <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <a href="https://openclassrooms.com/course-certificates/3239689026" target="_blank">
               <img style="height:150px" style="width:150px" src="img/certifs/html.png">
-                <div class="span12 pagination-centered">
+                <div class="span12">
                   HTML5 / CSS3
                 </div>
               </a>
@@ -260,7 +260,7 @@
           <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <a href="https://openclassrooms.com/course-certificates/5771754531">
               <img style="height:150px" style="width:150px" src="img/certifs/integrer.png">
-                <div class="span12 pagination-centered">
+                <div class="span12 ">
                   Integration
                 </div>
             </a>
@@ -269,7 +269,7 @@
           <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <a href="https://openclassrooms.com/course-certificates/5310942058" target="_blank">
               <img style="height:150px" style="width:150px" src="img/certifs/javascript.png">
-                <div class="span12 pagination-centered">
+                <div class="span12 ">
                   Javascript
                 </div>
             </a>
@@ -279,7 +279,7 @@
           <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <a href="https://openclassrooms.com/course-certificates/4789675666" target="_blank">
               <img style="height:150px" style="width: 150px" src="img/certifs/git.png">
-                <div class="span12 pagination-centered">
+                <div class="span12 ">
                   Git / Github
                 </div>
             </a>
@@ -313,25 +313,25 @@
         <ul class="certifs-logo list-inline img-responsive">
           <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <a href="http://www.lereacteur.io/fr" target="_blank">
-              <div class="pagination-centered">
+              <div>
                 <img class="press-img" src="img/press/reacteur.png"></br>
-                <span>React Native training</span>
+                <span>React Native training <br/>My feedbacks</span><br/>
               </div>
             </a>
           </li>
 
           <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <a href="http://www.adaweek.fr/" target="_blank">
-              <div class="pagination-centered">
+              <div>
                 <img class="press-img" src="img/press/adaweek.png"></br>
-                <span>Part of the team Adaweek <br/> fest around women in tech</span>
+                <span>Part of the team Adaweek <br/> fest around women in tech</span><br/>
               </div>
             </a>
           </li>
 
           <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <a href="https://www.facebook.com/konexio.eu/?pnref=story" target="_blank">
-              <div class="pagination-centered">
+              <div>
                 <img class="press-img" src="img/press/konexio.png"></br>
                 <span>Talk to refugees about how coding can help social inclusion / Association Konexio</span>
               </div>
@@ -340,7 +340,7 @@
 
           <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <a href="https://www.lewagon.com/fr/blog/lewagon-demoday-8" target="_blank">
-              <div class="span12 pagination-centered">
+              <div>
                 <img class="press-img" src="img/press/sneakr.png"></br>
                 <span>Live presentation of my website Sneakr <br>(48'51)</span>
               </div>
@@ -349,7 +349,7 @@
 
           <li class="col-md-12">
             <a href="http://www.grazia.fr/article/textfugees-refugenius-la-technologie-au-service-des-migrants-809301" target="blank">
-              <div class="span12 pagination-centered">
+              <div class="span12">
                 <img class="press-img"
                 src="img/press/refuginius.png"></br>
                 <span>Creation of the "Linkedin for refugees"</br>Hackaton Techfugees - Paris</span>
