--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <!-- Modal content-->
             <div class="modal-content">
               <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
                 <h4 class="modal-title">Choisissez votre langue</h4>
                 <h4 class="modal-title">Please choose your langage</h4>
               </div>
