--- a/indexFr.html
+++ b/indexFr.html
@@ -201,7 +201,7 @@
     <div class="col-lg-4 col-md-4 wow bounceInRight">
       <i class="fa fa-puzzle-piece fa-3x" aria-hidden="true" id="icon3"></i>
       <h3>Webdesign</h3>
-      <p lang="fr">Utilisation de Photoshop, différentes couches de style, contrastes, fonts. Animations SVG via HTML, CSS et Javascript.</p>
+      <p lang="fr">Utilisation de Photoshop, différentes couches de style, contrastes, transitions, fonts, etc. Animations SVG via HTML, CSS et Javascript.</p>
 
       <i class="fa fa-code-fork fa-3x" aria-hidden="true" id="icon3"></i>
       </br></br><h3>Versioning system</h3>
@@ -248,7 +248,7 @@
           <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <a href="https://openclassrooms.com/course-certificates/3239689026" target="_blank">
               <img style="height:150px" style="width:150px" src="img/certifs/html.png">
-                <div class="span12 pagination-centered">
+                <div class="span12">
                   HTML5 / CSS3
                 </div>
               </a>
@@ -257,7 +257,7 @@
           <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <a href="https://openclassrooms.com/course-certificates/5771754531">
               <img style="height:150px" style="width:150px" src="img/certifs/integrer.png">
-                <div class="span12 pagination-centered">
+                <div class="span12">
                   Intégration
                 </div>
             </a>
@@ -266,7 +266,7 @@
           <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <a href="https://openclassrooms.com/course-certificates/5310942058" target="_blank">
               <img style="height:150px" style="width:150px" src="img/certifs/javascript.png">
-                <div class="span12 pagination-centered">
+                <div class="span12">
                   Javascript
                 </div>
             </a>
@@ -276,7 +276,7 @@
           <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <a href="https://openclassrooms.com/course-certificates/4789675666" target="_blank">
               <img style="height:150px" style="width: 150px" src="img/certifs/git.png">
-                <div class="span12 pagination-centered">
+                <div class="span12">
                   Git / Github
                 </div>
             </a>
@@ -311,7 +311,7 @@
         <ul class="certifs-logo list-inline img-responsive">
           <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <a href="http://www.lereacteur.io/fr" target="_blank">
-              <div class="pagination-centered">
+              <div>
                 <img class="press-img" src="img/press/reacteur.png"></br>
                 <span lang="fr">"Ils ont suivi la formation"</span>
               </div>
@@ -320,7 +320,7 @@
 
           <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <a href="http://www.adaweek.fr/" target="_blank">
-              <div class="pagination-centered">
+              <div>
                 <img class="press-img" src="img/press/adaweek.png"></br>
                 <span lang="fr">Membre de l'équipe Adaweek <br/> évènement autour des femmes dans les métiers technologiques et scientifiques</span>
               </div>
@@ -329,7 +329,7 @@
 
           <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <a href="https://www.facebook.com/konexio.eu/?pnref=story" target="_blank">
-              <div class="pagination-centered">
+              <div>
                 <img class="press-img" src="img/press/konexio.png"></br>
                 <span lang="fr">Conférence auprès d'un public que réfugiés 'Comment le code peut aider à l'insertion sociale' / Association Konexio</span>
               </div>
@@ -338,7 +338,7 @@
 
           <li class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <a href="https://www.lewagon.com/fr/blog/lewagon-demoday-8" target="_blank">
-              <div class="span12 pagination-centered">
+              <div>
                 <img class="press-img" src="img/press/sneakr.png"></br>
                 <span lang="fr">Live présentation du site Sneakr <br>(48 minutes 51)</span>
               </div>
@@ -347,7 +347,7 @@
 
           <li class="col-md-12">
             <a href="http://www.grazia.fr/article/textfugees-refugenius-la-technologie-au-service-des-migrants-809301" target="blank">
-              <div class="span12 pagination-centered">
+              <div class="span12">
                 <img class="press-img"
                 src="img/press/refuginius.png"></br>
                 <span lang="fr">Developpement du "Linkedin des refugiés"</br>Hackaton Techfugees - Paris</span>
