quelques corrections responsive

--- a/indexFr.html
+++ b/indexFr.html
@@ -433,7 +433,7 @@
         <div class="over">
             <span class="more-tall">
               <h1>Hologram</h1>
-              <p>Développement de template / Html - CSS</p>
+              <p>Développement de template / <br/> Html - CSS</p>
             </span>
         </div>
       </div>
