--- a/indexEn.html
+++ b/indexEn.html
@@ -467,7 +467,49 @@
 
     <div class="row">
     <div class="col-lg-12 col-md-12">
-      <h1>Let's talk about it !</h1>
+      <h1 lang="en">Let's talk about it !</h1>
+
+      <div class="row">
+        <div class="col-lg-6 col-md-6">
+          <form class="form-horizontal">
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="name"></label>
+              <div class="col-sm-10">
+                <input type="name" class="form-control" id="name" placeholder="Name">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="first-name"></label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="fname" placeholder="First name">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="phone"></label>
+              <div class="col-sm-10">
+                <input type="number" class="form-control" id="pnumber" placeholder="Phone number">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="objet"></label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="objet" placeholder="About">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="message"></label>
+              <div class="col-sm-10">
+                <textarea class="form-control" id="message" name="message" rows="10" cols="4" placeholder="Message"></textarea>
+                <button type="submit" class="btn btn-default">Send</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-offset-1 col-md-4 form-group">
+            <p>Want to get in touch with me? <br/> Be it to request more info about myself or my experience, to ask for my resume, tips on how to solve your sudoku, random questions about the universe and the meaning of life...<br/> just feel free to drop me a line anytime. <br /><br/>I promise to reply A.S.A.P.<br/>No spam/soliciting pour moi, merci :)</p>
+          </div>
+        </div>
+      </form>
+      <br /><br />
 
 
       <ul class="list-inline">
