--- a/indexFr.html
+++ b/indexFr.html
@@ -423,7 +423,7 @@
               <p>Création / développement en Ruby / design</p>
               <p>Version-démo d'un moteur de recherche de Sneakr à petit prix</p>
               <p>Scraping, parsing, design, développement (projet à deux)</p>
-              <p>Site plus disponible en ligne<br/><br/><br/><a href="https://github.com/KatalinaNadasi/Sneakr"><button class="btn-primary">Voir projet sur Github</button></a></p>
+              <p>Site non disponible<br/><br/><br/><a href="https://github.com/KatalinaNadasi/Sneakr"><button class="btn-primary">Voir projet sur Github</button></a></p>
             </span>
         </div>
       </div>
@@ -464,6 +464,49 @@
     <div class="row">
     <div class="col-lg-12 col-md-12">
       <h1 lang="fr">Parlons-en !</h1>
+
+      <div class="row">
+        <div class="col-lg-6 col-md-6">
+          <form class="form-horizontal">
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="name"></label>
+              <div class="col-sm-10">
+                <input type="name" class="form-control" id="name" placeholder="Nom">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="first-name"></label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="fname" placeholder="Prénom">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="phone"></label>
+              <div class="col-sm-10">
+                <input type="number" class="form-control" id="pnumber" placeholder="Numéro de téléphone">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="objet"></label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="objet" placeholder="Objet">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="message"></label>
+              <div class="col-sm-10">
+                <textarea class="form-control" id="message" name="message" rows="10" cols="4" placeholder="Message"></textarea>
+                <button type="submit" class="btn btn-default">Envoyer</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-offset-1 col-md-4 form-group">
+            <p>Envie d'en savoir plus sur mon expérience, mes connaissances ?<br/> Besoin de vous procurer mon cv, avoir des conseils pour devenir développeur, d'autres questions concernant l'univers ou le sens de la vie, ou simplement boire un café dans la plus belle ville du monde ?<br/> Sentez-vous libre de m'envoyer un petit message.<br/>Je promets de répondre A.S.A.P.<br/>
+            Note : pas de spam, merci :)</p>
+          </div>
+        </div>
+      </form>
+      <br /><br />
 
 
       <ul class="list-inline">
